--- a/404.md
+++ b/404.md
@@ -4,4 +4,4 @@ title: 404
 show_tile: false
 ---
 
-Page not found! :(
+Oups! c'est une page 404 ! vous y étiez presque! Hop, le Menu est juste au dessus ↗️
